objects/Apttus_Config2__LegalEntity__c.object
<CustomObject>
    <description>Represents a legal entity</description>
    <fields>
        <fullName>Apttus_Config2__AddressLine1__c</fullName>
        <description>The Legal Entity Address Line 1</description>
        <inlineHelpText>The Legal Entity Address Line 1</inlineHelpText>
        <label>Legal Entity Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddressLine2__c</fullName>
        <description>The Legal Entity Address Line 2</description>
        <inlineHelpText>The Legal Entity Address Line 2</inlineHelpText>
        <label>Legal Entity Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddressLine3__c</fullName>
        <description>The Legal Entity Address Line 3</description>
        <inlineHelpText>The Legal Entity Address Line 3</inlineHelpText>
        <label>Legal Entity Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__City__c</fullName>
        <description>The Legal Entity City</description>
        <inlineHelpText>The Legal Entity City</inlineHelpText>
        <label>Legal Entity City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CompanyCode__c</fullName>
        <description>The company code</description>
        <inlineHelpText>The company code</inlineHelpText>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryCode__c</fullName>
        <description>The Legal Entity Country Code</description>
        <inlineHelpText>The Legal Entity Country Code</inlineHelpText>
        <label>Legal Entity Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Apttus_Config2__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a default legal entity</description>
        <inlineHelpText>This flag should e checked in order to use a default legal entity for any exception scenarios where the legal entity is missing.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LegalEntityName__c</fullName>
        <description>The descriptive name of the legal entity</description>
        <externalId>true</externalId>
        <inlineHelpText>The descriptive name of the legal entity</inlineHelpText>
        <label>Entity Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PostalCode__c</fullName>
        <description>The Legal Entity Postal Code</description>
        <inlineHelpText>The Legal Entity Postal Code</inlineHelpText>
        <label>Legal Entity Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__State__c</fullName>
        <description>The Legal Entity State</description>
        <inlineHelpText>The Legal Entity State</inlineHelpText>
        <label>Legal Entity State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxId__c</fullName>
        <description>The Tax ID for the Legal Entity</description>
        <inlineHelpText>The Tax ID for the Legal Entity</inlineHelpText>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Telephone__c</fullName>
        <description>The Legal Entity Phone Number</description>
        <inlineHelpText>The Legal Entity Phone Number</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__VATEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether VAT is enabled for the legal entity</description>
        <inlineHelpText>Indicates whether VAT is enabled for the legal entity</inlineHelpText>
        <label>VAT Enabled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__VATId__c</fullName>
        <description>The VAT ID for the Legal Entity</description>
        <inlineHelpText>The VAT ID for the Legal Entity</inlineHelpText>
        <label>VAT ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Website__c</fullName>
        <description>The Legal Entity Website Address</description>
        <inlineHelpText>The Legal Entity Website Address</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Legal Entity</label>
    <nameField>
        <displayFormat>LE-{00000000}</displayFormat>
        <label>Legal Entity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>